--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 }
 #dice-number {
   /*background-color: yellow;*/
-  border: solid 2px red;
-  border-radius: 100%;
+  border: solid 2px grey;
+  border-radius: 10%;
   width:100px;
   height: 100px;
   text-align: center;
@@ -15,8 +15,8 @@
 
 #dice-number-2 {
   /*background-color: yellow;*/
-  border: solid 2px red;
-  border-radius: 100%;
+  border: solid 2px grey;
+  border-radius: 10%;
   width:100px;
   height: 100px;
   text-align: center;
@@ -35,4 +35,8 @@
 
 .jumbotron {
   text-align: center;
+}
+
+img{
+  width: 100px;
 }
